k8s/csa-logs-exporter-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: csa-logs-exporter
  labels:
    app: gridcapa
    component: csa-logs-exporter
    region: swe
    process: csa
spec:
  selector:
    matchLabels:
      app: gridcapa
      component: csa-logs-exporter
      region: swe
      process: csa
  template:
    metadata:
      labels:
        app: gridcapa
        component: csa-logs-exporter
        region: swe
        process: csa
      annotations:
        "cluster-autoscaler.kubernetes.io/safe-to-evict": "false"
    spec:
      containers:
        - name: csa-logs-exporter
          image: csa-logs-exporter
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config/application.yml
              subPath: application.yml
              name: csa-logs-exporter-configmap-volume
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 35
            timeoutSeconds: 2
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              cpu: "1.0"
              memory: "5Gi"
            limits:
              cpu: "2.0"
              memory: "8Gi"
      restartPolicy: Always
      volumes:
        - name: csa-logs-exporter-configmap-volume
          configMap:
            name: csa-logs-exporter-configmap
