k8s/csa-runner-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: csa-runner
  labels:
    app: gridcapa
    component: runner
    region: swe
    process: csa
spec:
  selector:
    matchLabels:
      app: gridcapa
      component: runner
      region: swe
      process: csa
  template:
    metadata:
      labels:
        app: gridcapa
        component: runner
        region: swe
        process: csa
      annotations:
        "cluster-autoscaler.kubernetes.io/safe-to-evict": "false"
    spec:
      containers:
        - name: csa-runner
          image: csa-runner
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config/application.yml
              subPath: application.yml
              name: csa-runner-configmap-volume
            - mountPath: /config/logback.xml
              subPath: logback.xml
              name: csa-runner-configmap-volume
            - mountPath: /home/farao/.itools/config.yml
              subPath: config.yml
              name: csa-runner-itools-configmap-volume
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 35
            timeoutSeconds: 2
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              cpu: "12.0"
              memory: "50Gi"
            limits:
              cpu: "16.0"
              memory: "60Gi"
      restartPolicy: Always
      volumes:
        - name: csa-runner-configmap-volume
          configMap:
            name: csa-runner-configmap
        - name: csa-runner-itools-configmap-volume
          configMap:
            name: csa-runner-itools-configmap
