k8s/gridcapa-interruption-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interruption-server
  labels:
    app: gridcapa
    component: interruption-server
spec:
  selector:
    matchLabels:
      app: gridcapa
      component: interruption-server
  template:
    metadata:
      labels:
        app: gridcapa
        component: interruption-server
    spec:
      containers:
        - name: interruption-server
          image: gridcapa-interruption-server
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /config/application.yml
              subPath: application.yml
              name: interruption-server-volume
            - mountPath: /tmp
              name: tmp-emptydir
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: "0.1"
              memory: "256Mi"
            limits:
              cpu: "0.5"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 1
            successThreshold: 1
      restartPolicy: Always
      imagePullSecrets: []
      volumes:
        - name: interruption-server-volume
          configMap:
            name: interruption-server-configmap
        - name: tmp-emptydir
          emptyDir: {}
