k8s/minio-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gridcapa-minio
  labels:
    app: gridcapa
    component: gridcapa-minio

spec:
  selector:
    matchLabels:
      app: gridcapa
      component: gridcapa-minio
  template:
    metadata:
      labels:
        app: gridcapa
        component: gridcapa-minio
      annotations:
        "cluster-autoscaler.kubernetes.io/safe-to-evict": "false"
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: gridcapa-minio
          image: minio
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: gridcapa-minio-data
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 25
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /minio/health/live
              port: 9000
            initialDelaySeconds: 35
            timeoutSeconds: 2
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              cpu: "6.0"
              memory: "2Gi"
            limits:
              cpu: "8.0"
              memory: "4Gi"
      restartPolicy: Always
      volumes:
        - name: gridcapa-minio-data
          persistentVolumeClaim:
            claimName: gridcapa-minio-storage
