k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gridcapa-rabbitmq
  labels:
    app: gridcapa
    component: gridcapa-rabbitmq

spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
      component: gridcapa-rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
        component: gridcapa-rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.8.14-management-alpine
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: gridcapa-rabbitmq-configmap-volume
            subPath: rabbitmq.conf
            mountPath: /etc/rabbitmq/rabbitmq.conf
        ports:
        - containerPort: 5672
        resources:
          requests:
            cpu: "1.0"
            memory: "1Gi"
      volumes:
        - name: gridcapa-rabbitmq-configmap-volume
          configMap:
            name: gridcapa-rabbitmq-configmap
