k8s/rao-runner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rao-runner
  labels:
    app: gridcapa
    component: rao-runner
spec:
  selector:
    matchLabels:
      app: gridcapa
      component: rao-runner
  template:
    metadata:
      labels:
        app: gridcapa
        component: rao-runner
      annotations:
        "cluster-autoscaler.kubernetes.io/safe-to-evict": "false"
    spec:
      containers:
        - name: rao-runner
          image: rao-runner
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /home/farao/.itools/config.yml
              subPath: config.yml
              name: rao-runner-itools-configmap-volume
            - mountPath: /config/application.yml
              subPath: application.yml
              name: rao-runner-volume
            - mountPath: /config/logback.xml
              subPath: logback.xml
              name: rao-runner-volume
            - mountPath: /tmp
              name: tmp-emptydir
            - mountPath: /home/farao/farao-dep/runtime/xpress/bin/xpauth.xpr
              subPath: xpauth.xpr
              name: xpress-license
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: "14.0"
              memory: "20Gi"
            limits:
              cpu: "16.0"
              memory: "30Gi"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 1
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 1
            successThreshold: 1
      restartPolicy: Always
      imagePullSecrets: []
      volumes:
        - name: xpress-license
          secret:
            secretName: xpress-license
        - name: rao-runner-volume
          configMap:
            name: rao-runner
        - name: rao-runner-itools-configmap-volume
          configMap:
            name: rao-runner-itools-configmap
        - name: tmp-emptydir
          emptyDir: { }
