k8s/csa-logs-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csa-logs-exporter
  labels:
    app: gridcapa
    component: csa-logs-exporter
    region: swe
    process: csa
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: csa-logs-exporter
    region: swe
    process: csa
  ports:
    - port: 80
      targetPort: 8080
      name: http
