k8s/csa-profiles-converter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csa-profiles-converter
  labels:
    app: gridcapa
    component: csa-profiles-converter
    region: swe
    process: csa
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: csa-profiles-converter
    region: swe
    process: csa
  ports:
    - port: 80
      targetPort: 8080
      name: http
