k8s/csa-runner-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csa-runner
  labels:
    app: gridcapa
    component: runner
    region: swe
    process: csa
spec:
  type: ClusterIP
  selector:
    app: gridcapa
    component: runner
    region: swe
    process: csa
  ports:
    - port: 80
      targetPort: 8080
      name: http
