k8s/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gridcapa-rabbitmq
  labels:
    app: gridcapa
    component: gridcapa-rabbitmq
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: http
      protocol: TCP
      port: 15672
    - name: rabbitmq-mgmt-port
      port: 5672
      targetPort: 5672
