k8s/swe-csa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/csa-profiles-converter$ /csa-profiles-converter permanent;
      rewrite ^/csa-logs-exporter$ /csa-logs-exporter permanent;
      
      rewrite ^/utils/rabbitmq$ /utils/rabbitmq/ permanent;
      if ($request_uri ~ "^/utils/rabbitmq(/.*)") {
        proxy_pass http://upstream_balancer$1;
        break;
      }

    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/server-snippet: |
      merge_slashes on;
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/client-max-body-size: "900m"
    nginx.ingress.kubernetes.io/proxy-body-size: "900m"
  labels:
    app: gridcapa
    component: gridcapa
  name: gridcapa-csa
  namespace: csa
spec:
  ingressClassName: nginx
  rules:
    - host: gridcapa-csa.farao-community.com
      http:
        paths:
          - backend:
              service:
                name: gridcapa-minio
                port:
                  number: 9000
            path: /()(minio.*)
            pathType: Prefix
          - backend:
              service:
                name: gridcapa-rabbitmq
                port:
                  number: 15672
            path: /utils/rabbitmq(/|$)(.*)
            pathType: Prefix
          - backend:
              service:
                name: csa-profiles-converter
                port:
                  number: 80
            path: /()(csa-profiles-converter/.*)
            pathType: Prefix
          - backend:
              service:
                name: csa-logs-exporter
                port:
                  number: 80
            path: /()(csa-logs-exporter/.*)
            pathType: Prefix
  tls:
    - hosts:
        - gridcapa-csa.farao-community.com
      secretName: gridcapa-tls
